# utc-telegram-bot

./: .env.secret  .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  alphabets.txt  build.sh  renovate.json  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  pullrequest-branch.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
assets/: logo.xcf
ci/: setversion.sh
migrations/: 20210316172402_create_users_table.sql
src/: cli.rs  converter.rs  generate_images.rs  main.rs  manifest.rs  renderer.rs  run.rs
src/cli/: generate_images.rs  run.rs
src/converter/: char_map.rs  map.rs  map_error.rs  map_list.rs  spongebob.rs  spread.rs  transform.rs  transform_entry.rs  transform_error.rs  transform_list.rs  zalgo.rs
src/generate_images/: renderer.rs
src/generate_images/renderer/: cairo.rs
src/renderer/: cairo.rs  resvg.rs
src/run/: db.rs  web.rs
