[package]
name = "utc-telegram-bot"
version = "0.1.0"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
edition = "2018"

[dependencies]
heck = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git", rev = "07a9f9a1" }
fuzzy-matcher = "0.3"
rand = { version = "0.8", default-features = false, features = ["std", "small_rng"] }
paw = "1.0"
structopt = { version = "0.3", features = ["paw"] }

image = { version = "0.23", default-features = false, features = ["jpeg"], optional = true }
cairo-rs = { version = "0.9", optional = true }
pangocairo = { version = "0.10", optional = true }
pango = { version = "0.9", optional = true }
crc = "1.8"
lazy_static = "1.4"

sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
chrono = "0.4"

[features]
default = []
renderer = ["image", "cairo-rs", "pangocairo", "pango"]
